# quotick

./: Cargo.toml  readme.md
docs/: architecture.md  assumptions.md  auction-market-data-v1.md  auction-market-data-v2.md  auction-market-data-v3.md  auction-market-data-v4.md  auction-market-data-v5.md  auction-risk-checkpoint-v1.md  complexity.md  market-data-v1.md  market-data-v2.md  market-data-v3.md  snapshot-v1.md  snapshot-v10.md  snapshot-v11.md  snapshot-v12.md  snapshot-v13.md  snapshot-v14.md  snapshot-v15.md  snapshot-v16.md  snapshot-v17.md  snapshot-v18.md  snapshot-v19.md  snapshot-v2.md  snapshot-v20.md  snapshot-v3.md  snapshot-v4.md  snapshot-v5.md  snapshot-v6.md  snapshot-v7.md  snapshot-v8.md  snapshot-v9.md  storage.md  trading-calendar-v1.md  wal-v1.md  wal-v10.md  wal-v11.md  wal-v12.md  wal-v13.md  wal-v14.md  (+14 more)
examples/: auction_restart.rs  clearing_ledger.rs  durable_accounting.rs  feed_repair.rs  indicative_cross.rs  order_lifecycle.rs  readme.md  segmented_cutover.rs  signed_price_discovery.rs  state_handoff.rs  venue_session.rs  versioned_universe.rs  wal_recovery.rs
src/: auction.rs  auction_book.rs  auction_engine.rs  auction_market_data.rs  auction_risk.rs  bounded_hash.rs  calendar.rs  codec.rs  compat.rs  dbn.rs  decode.rs  domain.rs  durable.rs  durable_auction.rs  durable_ledger.rs  durable_risk.rs  durable_storage.rs  encode.rs  enums.rs  error.rs  history.rs  indexed_avl.rs  instrument.rs  journal.rs  ledger.rs  ledger_magnitude.rs  lib.rs  macros.rs  main.rs  market_data.rs  matching.rs  metadata.rs  prelude.rs  record.rs  risk.rs  (+4 more)
(+84 files in other folders)
