[package]
name = "quotick"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
readme = "readme.md"
description = "Deterministic, auditable financial market infrastructure."
license-file = "license.txt"
autobins = false

[lib]
name = "quotick"
path = "src/lib.rs"

[dependencies]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = true
strip = "debuginfo"

[profile.dev]
overflow-checks = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
